# yadro_test

./: .gitmodules  CMakeLists.txt  README.md  Source.cpp  yadro.cpp
.github/workflows/: cmake.yml
Tests/: CMakeLists.txt  reportcard.csv  test.cpp
yadro/: CMakeLists.txt  source.cpp  source.h
